<resources>
    <string name="app_name">1,2,Tree</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="durationOption">%1$d minutes </string>
    <string name="timerTextFormat">%1$d : %2$d </string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <integer-array name="coin_two_side">
        <item>@drawable/head</item>
        <item>@drawable/tail</item>
    </integer-array>

    <string-array name="coin_two_side_name">
        <item>Head</item>
        <item>Tail</item>
    </string-array>

    <string name="coin_toss_save_history_win">Choice: %s, Result: %s, \nPICKER WIN \ntime: %s</string>
    <string name="coin_toss_save_history_lost">Choice: %s, Result: %s, \nPICKER LOST \ntime: %s</string>
    <string name="coin_toss_picker">Picker: %s</string>
    <string name="timeout">Timeout Timer</string>
    <string name="editChildActivityTitle">Child History</string>
    <string name="timerNotificationTitle">Timer</string>
    <string name="timerNotificationDescription">Time is up!</string>
    <string name="notificationActionButtonText">Dismiss</string>
    <string name="toss_history">Toss History</string>
    <string name="Result">Result</string>
    <string name="result_repeat_option">One more Toss</string>
    <string name="result_leave_option">Leave</string>

    <string name="addChild">Add Child</string>
    <string name="name">Name</string>
    <string name="child_to_add">child to add</string>
    <string name="child_to_remove">child to remove</string>
    <string name="remove_child">REMOVE CHILD</string>
    <string name="list_of_current_children">List of Current Children (click on view to edit the child!)</string>
    <string name="edit_children">Edit Children</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="childNameListViewPrint">\"Child Name: \"</string>
    <string name="title">Parenting is as easy as</string>
    <string name="resources">android.resource://</string>
    <string name="win_text">WIN</string>
    <string name="history_string_coin_flip">\"Picker: %s\n,%s\"</string>
    <string name="nobody">NOBODY</string>
    <string name="no_save_child">No saved child data</string>
    <string name="add_child_option">Add child</string>
    <string name="change_order">Change Order</string>
    <string name="add_task">Add Task</string>
    <string name="add">Add</string>
    <string name="add_edit_warning">You need to enter a name for the task</string>
    <string name="cancel">Cancel</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit">Edit</string>
    <string name="task_detail">Task Detail</string>
    <string name="done">Done</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="take_new_image">Take new image</string>

    <!-- Sources-->
    <string name="timer_background">https://www.youtube.com/watch?v=lorp0Q9yi04</string>
    <string name="timer_backsound">https://www.youtube.com/watch?v=3Mj92qmOXlE</string>
    <string name="tree_icon">https://www.shutterstock.com/search/pixel+tree</string>
    <string name="menu_background">https://scx1.b-cdn.net/csz/news/800a/2017/tree.jpg</string>
    <string name="help_button">https://www.nicepng.com/ourpic/u2q8e6w7q8o0i1u2_h7-slider-1-img-1-tree-stump-top/</string>
    <string name="default_photo">https://www.vectorstock.com/royalty-free-vector/pine-tree-kawaii-character-vector-18584176</string>
    <string name="menu_button"> https://static.wikia.nocookie.net/theforest_gamepedia/images/5/5d/LeafFarket.png/revision/latest/scale-to-width-down/310?cb=20170924102207</string>
    <string name="repoManager">Repo Manager: Jonathon (jpa143)\n</string>
    <string name="productOwner">Product Owner: Daniel Z (yza608)\n</string>
    <string name="teamMember">Team Member: Johnson L (jkl53)\n</string>
    <string name="scrumMaster">\"Scrum Master: Andrew (afa41) \"</string>
    <string name="timerBackground">timer Backgrounds\n</string>
    <string name="timerBackSound">timer Background\n</string>
    <string name="treeForIcon">tree for icon\n</string>
    <string name="menuBackGround">menu background\n</string>
    <string name="defaultPhoto">default photo\n</string>
    <string name="menuButton">menu button\n</string>
    <string name="helpButton">help button</string>
    <string name="addNewChildTitle">Adding New Child</string>
    <string name="saveChangesButtonText">save changes</string>
    <string name="addChildButtonText">Add Child</string>
    <string name="editChildTitle">Editing Child</string>
    <string name="editChildTextButton">Save Changes</string>
    <string name="addChildTitle">Adding New Child</string>
    <string name="addChildTextButton">Add Child</string>
    <string name="num_of_breath_set">Number of Breath: %d</string>
    <string name="history">History</string>


    <string name="intial_message_breath">Press begin to start the cycle...</string>
    <string name="begin_button_text">Begin</string>
    <string name="goodjob_button_text">Goodjob</string>
    <string name="out_button_text">Out</string>
    <string name="release_button_text">Release the button and exhale</string>
    <string name="inhaling_text">Inhale</string>
    <string name="exhaling_text">Exhale</string>
    <string name="hold_button_text">Hold the button and inhale</string>
    <string name="in_button_text">In</string>
    <string name="exhale_or_press_button_text">Continue to exhale or press the button</string>
    <string name="no_child_warning">No Child yet</string>
    <string name="no_child_done_btn">There is no child yet, please add a child</string>
    <string name="delete_child_name">DELETED</string>
</resources>