<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.95"
    android:background="@drawable/tree"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/TimeoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_effect"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        android:text="@string/timeout"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/flipCoin"
        app:layout_constraintEnd_toEndOf="@+id/editChildren"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editChildren" />

    <Button
        android:id="@+id/flipCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_effect"
        android:text="@string/flip_coin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/title"
        android:layout_width="381dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/tcm_tw"
        android:shadowColor="@color/white"
        android:shadowRadius="5"
        android:text="@string/title"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editChildren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_effect"
        android:text="@string/edit_children"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/flipCoin"
        app:layout_constraintStart_toStartOf="@+id/flipCoin"
        app:layout_constraintTop_toBottomOf="@+id/flipCoin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="68dp"
        android:fontFamily="@font/leaf_font"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:text="1,2,TREE"
        android:textColor="@color/lime"
        android:textColorHighlight="@color/green"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/TimeoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.552" />

</androidx.constraintlayout.widget.ConstraintLayout>